overflow bug fix

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,7 +14,7 @@ p, a, h1, h2, h3, h4, h5, span {
 }
 .overflow {
   overflow: hidden;
-  height: 90vh;
+  /* height: 90vh; */
 }
 /* font-styling */
 h1 {
